--- a/app/src/main/res/layout/activity_complete_profile.xml
+++ b/app/src/main/res/layout/activity_complete_profile.xml
@@ -275,13 +275,15 @@
                 app:cardBackgroundColor="@color/white">
 
                 <LinearLayout
+                    android:id="@+id/select_prompt_1_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:paddingStart="@dimen/_10sdp"
                     android:paddingTop="@dimen/_10sdp"
                     android:paddingEnd="@dimen/_20sdp"
-                    android:paddingBottom="@dimen/_10sdp">
+                    android:paddingBottom="@dimen/_10sdp"
+                    android:visibility="visible">
 
                     <ImageView
                         android:layout_width="@dimen/_40sdp"
@@ -298,6 +300,38 @@
                         android:text="@string/select_your_prompt_question"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_16ssp" />
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/answer_prompt_1_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingTop="@dimen/_5sdp"
+                    android:paddingBottom="@dimen/_5sdp"
+                    android:visibility="gone">
+                    <TextView
+                        android:id="@+id/prompt_question_1_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
+                        android:layout_marginStart="@dimen/_20sdp"
+                        android:layout_marginEnd="@dimen/_20sdp"
+                        android:fontFamily="@font/sf_pro_rounded_medium"
+                        android:textStyle="bold"
+                        android:text="@string/select_your_prompt_question"
+                        android:textColor="@color/indicatioractive"
+                        android:textSize="@dimen/_20ssp" />
+                    <TextView
+                        android:id="@+id/prompt_answer_1_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
+                        android:fontFamily="@font/sf_pro_rounded_regular"
+                        android:text="@string/select_your_prompt_question"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_16ssp"
+                        android:layout_marginStart="@dimen/_20sdp"
+                        android:layout_marginEnd="@dimen/_20sdp"/>
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
 
@@ -386,13 +420,15 @@
                 app:cardBackgroundColor="@color/white">
 
                 <LinearLayout
+                    android:id="@+id/select_prompt_2_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:paddingStart="@dimen/_20sdp"
                     android:paddingTop="@dimen/_10sdp"
                     android:paddingEnd="@dimen/_10sdp"
-                    android:paddingBottom="@dimen/_10sdp">
+                    android:paddingBottom="@dimen/_10sdp"
+                    android:visibility="gone">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -409,6 +445,38 @@
                         android:layout_gravity="center"
                         android:layout_marginStart="@dimen/_10sdp"
                         android:src="@drawable/ic_add" />
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/answer_prompt_2_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingTop="@dimen/_5sdp"
+                    android:paddingBottom="@dimen/_5sdp"
+                    android:visibility="visible">
+                    <TextView
+                        android:id="@+id/prompt_question_2_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
+                        android:layout_marginStart="@dimen/_20sdp"
+                        android:layout_marginEnd="@dimen/_20sdp"
+                        android:fontFamily="@font/sf_pro_rounded_medium"
+                        android:textStyle="bold"
+                        android:text="@string/select_your_prompt_question"
+                        android:textColor="@color/indicatioractive"
+                        android:textSize="@dimen/_20ssp" />
+                    <TextView
+                        android:id="@+id/prompt_answer_2_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
+                        android:fontFamily="@font/sf_pro_rounded_regular"
+                        android:text="@string/select_your_prompt_question"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_16ssp"
+                        android:layout_marginStart="@dimen/_20sdp"
+                        android:layout_marginEnd="@dimen/_20sdp"/>
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
 
@@ -497,13 +565,15 @@
                 app:cardBackgroundColor="@color/white">
 
                 <LinearLayout
+                    android:id="@+id/select_prompt_3_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:paddingStart="@dimen/_10sdp"
                     android:paddingTop="@dimen/_10sdp"
                     android:paddingEnd="@dimen/_20sdp"
-                    android:paddingBottom="@dimen/_10sdp">
+                    android:paddingBottom="@dimen/_10sdp"
+                    android:visibility="visible">
 
                     <ImageView
                         android:layout_width="@dimen/_40sdp"
@@ -520,6 +590,38 @@
                         android:text="@string/select_your_prompt_question"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_16ssp" />
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/answer_prompt_3_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingTop="@dimen/_5sdp"
+                    android:paddingBottom="@dimen/_5sdp"
+                    android:visibility="gone">
+                    <TextView
+                        android:id="@+id/prompt_question_3_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
+                        android:layout_marginStart="@dimen/_20sdp"
+                        android:layout_marginEnd="@dimen/_20sdp"
+                        android:fontFamily="@font/sf_pro_rounded_medium"
+                        android:textStyle="bold"
+                        android:text="@string/select_your_prompt_question"
+                        android:textColor="@color/indicatioractive"
+                        android:textSize="@dimen/_20ssp" />
+                    <TextView
+                        android:id="@+id/prompt_answer_3_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
+                        android:fontFamily="@font/sf_pro_rounded_regular"
+                        android:text="@string/select_your_prompt_question"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_16ssp"
+                        android:layout_marginStart="@dimen/_20sdp"
+                        android:layout_marginEnd="@dimen/_20sdp"/>
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
 
