--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -258,7 +258,10 @@
             <RelativeLayout
                 android:id="@+id/button_terms_settings"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true"
+                android:background="?attr/selectableItemBackground">
                 <ImageView
                     android:id="@+id/image_bullet_6"
                     android:layout_width="wrap_content"
