--- a/app/src/main/res/layout/activity_complete_profile.xml
+++ b/app/src/main/res/layout/activity_complete_profile.xml
@@ -34,7 +34,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/view"
         android:layout_marginTop="@dimen/_20sdp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="visible">
 
         <TextView
             android:layout_width="match_parent"
@@ -101,17 +102,79 @@
             android:visibility="gone"
             app:drawableEndCompat="@drawable/ic_upload"
             app:drawableTint="@color/white" />
-
-        <com.github.ybq.android.spinkit.SpinKitView
-            android:id="@+id/uploading_progress"
-            style="@style/SpinKitView.Large.Circle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:SpinKit_Color="@color/indicatioractive"
-            android:visibility="gone"
-            android:elevation="@dimen/_10sdp"
-            android:layout_gravity="center"
-            android:layout_marginTop="@dimen/_20sdp"/>
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/bio_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/view"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_20sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
+            android:fontFamily="@font/darkergrotesque_regular"
+            android:text="Enter a bio for your profile"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_18ssp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/edittext_about"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginStart="@dimen/_20sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
+            android:background="@drawable/border_drawable"
+            android:fontFamily="@font/ptsans_regular"
+            android:gravity="top"
+            android:inputType="textMultiLine"
+            android:lines="5"
+            android:padding="@dimen/_10sdp"
+            android:scrollbars="vertical"
+            android:hint="Write something about yourself"
+            android:textColor="@color/textSubTitle"
+            android:textSize="@dimen/_14ssp" />
+
+        <TextView
+            android:id="@+id/update_bio"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
+            android:background="@drawable/border_rounded_corner"
+            android:clickable="true"
+            android:focusable="true"
+            android:fontFamily="@font/darkergrotesque_bold"
+            android:padding="@dimen/_10sdp"
+            android:text="Update"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_18ssp"
+            app:drawableEndCompat="@drawable/ic_arrow_forward"
+            app:drawableTint="@color/white" />
+
+    </LinearLayout>
+
+    <com.github.ybq.android.spinkit.SpinKitView
+        android:id="@+id/uploading_progress"
+        style="@style/SpinKitView.Large.Circle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:SpinKit_Color="@color/indicatioractive"
+        android:layout_centerHorizontal="true"
+        android:elevation="@dimen/_10sdp"
+        android:layout_gravity="center"
+        android:layout_alignParentBottom="true"
+        android:visibility="gone"
+        android:layout_marginBottom="@dimen/_20sdp"/>
 
 </RelativeLayout>
